Z-index fixed.

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ aside {
 	display: inline-block;
 	vertical-align: top;
 	position: fixed;
+	z-index: 15;
 	left: 0;
 	top: 50px;
 	padding: 0 1em 1em 0;
@@ -61,8 +62,8 @@ nav {
 nav li a {
 	text-decoration: none;
 	padding: 0.75em;
-	background: ##ddd;
-	color: black;
+	background: #ddd;
+	color: #000;
 	border-bottom: 1px solid #666;
 	width: 100%;
 	box-sizing: border-box;
