--- a/webbits.css
+++ b/webbits.css
@@ -72,6 +72,7 @@ label.wb::selection {
 
 .wb.wb-nav {
 	position: relative;
+	z-index: 10;
 }
 .wb.wb-nav label.wb {
 	cursor: pointer;
@@ -116,6 +117,7 @@ label.wb::selection {
 	margin-top: 15px;
 	display: none;
 	width: 100%;
+	z-index: 10;
 }
 .wb.wb-nav section li a:hover {
 	background: var(--wb-color-lite);
